--- a/src/main/resources/com/example/jewelchase230/highScore-table.fxml
+++ b/src/main/resources/com/example/jewelchase230/highScore-table.fxml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jewelchase230.menus.HighScoreMenu">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jewelchase230.menus.HighScoreMenu">
    <children>
       <Label alignment="TOP_CENTER" text="High scores" underline="true">
          <font>
@@ -20,6 +15,7 @@
             <Insets bottom="10.0" />
          </VBox.margin>
       </Label>
+      <Label fx:id="levelNumLabel" text="Level 1" />
       <CheckBox mnemonicParsing="false" text="Table">
          <VBox.margin>
             <Insets bottom="10.0" left="450.0" />
@@ -28,7 +24,6 @@
       <TableView fx:id="hsTable" prefHeight="200.0" prefWidth="884.0">
         <columns>
           <TableColumn fx:id="playerCol" prefWidth="200.0" text="Player" />
-          <TableColumn fx:id="levelCol" text="Level" />
             <TableColumn fx:id="hsCol" prefWidth="340.0" text="High Score" />
         </columns>
       </TableView>
