--- a/src/main/resources/com/example/jewelchase230/pause-menu.fxml
+++ b/src/main/resources/com/example/jewelchase230/pause-menu.fxml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jewelchase230.menus.PauseMenu">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jewelchase230.menus.PauseMenu">
    <children>
       <Label text="Game Paused">
          <font>
@@ -15,21 +14,31 @@
       </Label>
       <Button mnemonicParsing="false" onMouseClicked="#onResumeGamePressed" text="Resume">
          <VBox.margin>
-            <Insets top="20.0" />
+            <Insets top="15.0" />
          </VBox.margin></Button>
+      <Button mnemonicParsing="false" onMouseClicked="#onSaveGamePressed" text="Save Game">
+         <VBox.margin>
+            <Insets top="10.0" />
+         </VBox.margin>
+      </Button>
       <Button mnemonicParsing="false" onMouseClicked="#onSettingsMenuPressed" text="Settings">
          <VBox.margin>
-            <Insets top="15.0" />
+            <Insets top="10.0" />
          </VBox.margin>
       </Button>
       <Button mnemonicParsing="false" onMouseClicked="#onHighScoreTablePressed" text="HighScores">
          <VBox.margin>
-            <Insets top="15.0" />
+            <Insets top="10.0" />
+         </VBox.margin>
+      </Button>
+      <Button mnemonicParsing="false" onMouseClicked="#onMainMenuPressed" text="Main Menu">
+         <VBox.margin>
+            <Insets top="10.0" />
          </VBox.margin>
       </Button>
       <Button mnemonicParsing="false" onMouseClicked="#onExitPressed" text="Exit">
          <VBox.margin>
-            <Insets top="15.0" />
+            <Insets top="10.0" />
          </VBox.margin>
       </Button>
    </children>
