--- a/src/main/resources/com/example/jewelchase230/level-select-menu.fxml
+++ b/src/main/resources/com/example/jewelchase230/level-select-menu.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -22,16 +24,61 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="586.0">
                <children>
-                  <Button fx:id="lvl1" layoutX="105.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="1" AnchorPane.leftAnchor="55.0" />
-                  <Button fx:id="lvl2" layoutX="180.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="2" AnchorPane.leftAnchor="155.0" />
-                  <Button fx:id="lvl3" layoutX="255.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="3" AnchorPane.leftAnchor="255.0" />
-                  <Button fx:id="lvl4" layoutX="330.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="4" AnchorPane.leftAnchor="355.0" />
-                  <Button fx:id="lvl5" layoutX="405.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="5" AnchorPane.leftAnchor="455.0" />
-                  <Button fx:id="lvl6" layoutX="55.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="6" AnchorPane.leftAnchor="55.0" />
-                  <Button fx:id="lvl7" layoutX="130.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="7" AnchorPane.leftAnchor="155.0" />
-                  <Button fx:id="lvl8" layoutX="205.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="8" AnchorPane.leftAnchor="255.0" />
-                  <Button fx:id="lvl9" layoutX="280.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="9" AnchorPane.leftAnchor="355.0" />
-                  <Button fx:id="lvl10" layoutX="355.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="10" AnchorPane.leftAnchor="455.0" />
+                  <Button fx:id="lvl1" layoutX="105.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="1" AnchorPane.leftAnchor="55.0" AnchorPane.rightAnchor="456.2" AnchorPane.topAnchor="15.0" />
+                  <Button fx:id="lvl2" layoutX="180.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="2" AnchorPane.leftAnchor="155.0" AnchorPane.topAnchor="15.0" />
+                  <Button fx:id="lvl3" layoutX="255.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="3" AnchorPane.leftAnchor="255.0" AnchorPane.topAnchor="15.0" />
+                  <Button fx:id="lvl4" layoutX="330.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="4" AnchorPane.leftAnchor="355.0" AnchorPane.topAnchor="15.0" />
+                  <Button fx:id="lvl5" layoutX="405.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="5" AnchorPane.leftAnchor="455.0" AnchorPane.topAnchor="15.0" />
+                  <Button fx:id="lvl6" layoutX="55.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="6" AnchorPane.leftAnchor="55.0" AnchorPane.topAnchor="100.0" />
+                  <Button fx:id="lvl7" layoutX="130.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="7" AnchorPane.leftAnchor="155.0" AnchorPane.topAnchor="100.0" />
+                  <Button fx:id="lvl8" layoutX="205.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="8" AnchorPane.leftAnchor="255.0" AnchorPane.topAnchor="100.0" />
+                  <Button fx:id="lvl9" layoutX="280.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="9" AnchorPane.leftAnchor="355.0" AnchorPane.topAnchor="100.0" />
+                  <Button fx:id="lvl10" layoutX="355.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#changeLevel" prefHeight="75.0" prefWidth="75.0" text="10" AnchorPane.bottomAnchor="24.799999999999997" AnchorPane.leftAnchor="455.0" AnchorPane.rightAnchor="56.199999999999974" AnchorPane.topAnchor="100.0" />
+                  <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="165.0" layoutY="110.0" opacity="0.14" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.leftAnchor="155.0" AnchorPane.topAnchor="15.0">
+                     <image>
+                        <Image url="@../fxmlImages/lock.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="265.0" layoutY="110.0" opacity="0.14" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.leftAnchor="255.0" AnchorPane.topAnchor="15.0">
+                     <image>
+                        <Image url="@../fxmlImages/lock.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="365.0" layoutY="110.0" opacity="0.14" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.leftAnchor="355.0" AnchorPane.topAnchor="15.0">
+                     <image>
+                        <Image url="@../fxmlImages/lock.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="465.0" layoutY="110.0" opacity="0.14" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.leftAnchor="455.0" AnchorPane.topAnchor="15.0">
+                     <image>
+                        <Image url="@../fxmlImages/lock.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="55.0" layoutY="14.0" opacity="0.14" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.leftAnchor="55.0" AnchorPane.topAnchor="100.0">
+                     <image>
+                        <Image url="@../fxmlImages/lock.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="65.0" layoutY="110.0" opacity="0.14" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.leftAnchor="155.0" AnchorPane.topAnchor="100.0">
+                     <image>
+                        <Image url="@../fxmlImages/lock.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="65.0" layoutY="110.0" opacity="0.14" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.leftAnchor="255.0" AnchorPane.topAnchor="100.0">
+                     <image>
+                        <Image url="@../fxmlImages/lock.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="165.0" layoutY="110.0" opacity="0.14" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.leftAnchor="355.0" AnchorPane.topAnchor="100.0">
+                     <image>
+                        <Image url="@../fxmlImages/lock.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="365.0" layoutY="110.0" opacity="0.14" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.leftAnchor="455.0" AnchorPane.topAnchor="100.0">
+                     <image>
+                        <Image url="@../fxmlImages/lock.jpg" />
+                     </image>
+                  </ImageView>
                </children>
             </AnchorPane>
         </content>
