--- a/src/main/resources/com/example/jewelchase230/profile-select.fxml
+++ b/src/main/resources/com/example/jewelchase230/profile-select.fxml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jewelchase230.menus.ProfileSelectMenu">
+<VBox alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jewelchase230.menus.ProfileSelectMenu">
    <children>
       <Label alignment="TOP_CENTER" text="Profiles" underline="true">
          <font>
@@ -38,9 +35,10 @@
       </Pane>
       <Pane prefHeight="162.0" prefWidth="600.0">
          <children>
-            <Button layoutX="65.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#onBackToProfileMenuPressed" prefHeight="120.0" prefWidth="120.0" text="Back" />
-            <Button layoutX="240.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#onStartGamePressed" prefHeight="120.0" prefWidth="120.0" text="Start" />
-            <Button layoutX="420.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#onDeletePressed" prefHeight="120.0" prefWidth="120.0" text="Delete" />
+            <Button layoutX="41.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#onBackToProfileMenuPressed" prefHeight="120.0" prefWidth="120.0" text="Back" />
+            <Button layoutX="307.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#onStartGamePressed" prefHeight="120.0" prefWidth="120.0" text="Start" />
+            <Button layoutX="440.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#onDeletePressed" prefHeight="120.0" prefWidth="120.0" text="Delete" />
+            <Button fx:id="saveGameButton" disable="true" layoutX="173.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#onLoadSaveGamePressed" prefHeight="120.0" prefWidth="120.0" text="Continue Last Saved Game" textAlignment="CENTER" wrapText="true" />
          </children>
       </Pane>
    </children>
