--- a/src/main/resources/com/example/jewelchase230/main-menu.fxml
+++ b/src/main/resources/com/example/jewelchase230/main-menu.fxml
@@ -21,7 +21,7 @@
             <Insets bottom="40.0" left="20.0" right="20.0" />
          </VBox.margin>
       </Label>
-      <Button centerShape="false" mnemonicParsing="false" onMouseClicked="#onProlifeMenuPressed" text="Start Game">
+      <Button centerShape="false" mnemonicParsing="false" onMouseClicked="#onProfileMenuPressed" text="Start Game">
          <VBox.margin>
             <Insets bottom="10.0" />
          </VBox.margin></Button>
