--- a/src/main/resources/com/example/jewelchase230/profile-create-menu.fxml
+++ b/src/main/resources/com/example/jewelchase230/profile-create-menu.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jewelchase230.menus.ProfileCreateMenu">
+<VBox alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jewelchase230.menus.ProfileCreateMenu">
    <children>
       <Label alignment="TOP_CENTER" text="Create profile" underline="true">
          <font>
@@ -17,12 +21,18 @@
       </Label>
       <Pane prefHeight="142.0" prefWidth="600.0">
          <children>
-            <Label layoutX="267.0" layoutY="29.0" text="Enter Name">
+            <Label layoutX="388.0" layoutY="30.0" text="Enter Name">
                <font>
                   <Font name="System Bold Italic" size="12.0" />
                </font>
             </Label>
-            <TextField id="createProfileName" fx:id="createProfileName" layoutX="226.0" layoutY="76.0" />
+            <TextField id="createProfileName" fx:id="createProfileName" layoutX="347.0" layoutY="77.0" />
+            <ComboBox fx:id="chooseCatComboBox" layoutX="63.0" layoutY="77.0" prefHeight="25.0" prefWidth="178.0" promptText="Leave Blank for Random" visibleRowCount="4" />
+            <Label layoutX="114.0" layoutY="39.0" prefHeight="17.0" prefWidth="76.0" text="Choose Cat? ">
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
       <Pane prefHeight="82.0" prefWidth="600.0">
