--- a/src/main/resources/com/example/jewelchase230/highScore-table.fxml
+++ b/src/main/resources/com/example/jewelchase230/highScore-table.fxml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jewelchase230.menus.HighScoreMenu">
+<VBox alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jewelchase230.menus.HighScoreMenu">
    <children>
       <Label alignment="TOP_CENTER" text="High scores" underline="true">
          <font>
@@ -21,7 +26,7 @@
             <Insets bottom="10.0" left="450.0" />
          </VBox.margin>
       </CheckBox>
-      <TableView fx:id="hsTable" prefHeight="200.0" prefWidth="884.0">
+      <TableView fx:id="hsTable" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="600.0">
         <columns>
           <TableColumn fx:id="playerCol" prefWidth="200.0" text="Player" />
             <TableColumn fx:id="hsCol" prefWidth="340.0" text="High Score" />
